--- a/package.json
+++ b/package.json
@@ -6,23 +6,44 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "express": "nodemon srv/index.ts --watch srv/*.*",
+    "express": "nodemon srv/index.ts --watch srv/**",
     "express:run": "node dist/server/index.js"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
+    "@hasezoey/typegoose": "^5.9.2",
+    "@typegoose/typegoose": "^7.0.0",
+    "@types/express-session": "^1.17.0",
+    "@types/mongoose": "^5.7.13",
+    "@types/passport": "^1.0.3",
+    "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.10",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
+    "shortid": "^2.2.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
+    "@mdi/js": "^5.1.45",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.2",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
