--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "express": "nodemon srv/index.ts --watch srv/**",
     "express:run": "node dist/server/index.js",
-    "start": "node dist/server/index.js",
+    "start": "node dist/server/index.js"
   },
   "dependencies": {
     "@hasezoey/typegoose": "^5.9.2",
