--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "express": "nodemon srv/index.ts --watch srv/**",
     "express:run": "node dist/server/index.js",
-    "postinstall": "yarn install && tsc &&  yarn build",
+    "postinstall": "yarn build && tsc",
     "start": "node dist/server/index.js"
   },
   "dependencies": {
