--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # dev server adress
 VUE_APP_ROOT_API="http://localhost:3000"
 # dev server port
-SERVER_PORT=3000
+PORT=3000
 # Google OAuth
 GOOGLE_CLIENT_ID="157197287125-c6r99ne8n1kd1u6poacucjbej7odscic.apps.googleusercontent.com"
 GOOGLR_CLIENT_SECRET="5Hkk8y-QWeUqLX7kafkTJGhk"
